<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">kira</string>
    <string name="label_copyright">© 2015 moemoe.la All Rights Reserved</string>
    <string name="app_version">6.0.2_20180716</string>
    <string name="app_version_code">6020</string>
    <string name="label_scheme">neta</string>
    <string name="label_host">com.moemoe.lalala</string>
    <string name="label_doc_path">/doc_1.0</string>
    <string name="label_doc_action">doc_1.0</string>
    <string name="label_doc_path_old">/doc_0.9</string>
    <string name="label_doc_action_old">doc_0.9</string>
    <string name="label_word_path">/word_1.1</string>
    <string name="label_tag_path">/tag_1.0</string>
    <string name="label_tag_action">tag_1.0</string>
    <string name="label_room_path">/room_1.0</string>
    <string name="label_room_action">room_1.0</string>
    <string name="label_class_path">/func_go2class_1.0</string>
    <string name="label_url_path">/url_inner_1.0</string>
    <string name="label_url_action">url_inner_1.0</string>
    <string name="label_out_url_path">/url_outter_1.0</string>
    <string name="label_out_url_action">url_outter_1.0</string>
    <string name="label_department_path">/department_1.0</string>
    <string name="label_department_action">department_1.0</string>
    <string name="label_department_path_library">library</string>
    <string name="label_trash_path">/garbage_1.0</string>
    <string name="label_img_trash_path">/garbage_img_1.0</string>
    <string name="label_trash_action">garbage_1.0</string>
    <string name="label_img_trash_action">garbage_img_1.0</string>
    <string name="label_gacha_path">/gacha_1.0</string>
    <string name="label_gacha_action">gacha_1.0</string>
    <string name="label_cal_column_path">/calui_1.0</string>
    <string name="label_cal_column_action">calui_1.0</string>
    <string name="label_plot_path">/plot_1.0</string>
    <string name="label_plot_action">plot_1.0</string>
    <string name="label_qiu_path">/qiu_1.0</string>
    <string name="label_qiu_action">qiu_1.0</string>
    <string name="label_donation_action">donation_1.0</string>
    <string name="label_donation_path">/donation_1.0</string>
    <string name="label_snow_action">snow_1.0</string>
    <string name="label_snow_path">/snow_1.0</string>
    <string name="label_swim_path">/swim_2.0</string>
    <string name="label_swim_action">swim_2.0</string>
    <string name="label_user_info_path">/user_info_1.0</string>
    <string name="label_user_info_action">user_info_1.0</string>
    <string name="label_user_info_user_comment_path">/user_info_user_comment_1.0</string>
    <string name="label_user_info_user_comment_action">user_info_user_comment_1.0</string>
    <string name="label_user_info_notify_path">/user_info_notify_1.0</string>
    <string name="label_user_info_notify_action">user_info_notify_1.0</string>
    <string name="label_blackboard_path">/blackboard_1.0</string>
    <string name="label_blackboard_action">blackboard_1.0</string>
    <string name="label_talk_path">/talk_1.0</string>
    <string name="label_talk_action">talk_1.0</string>
    <string name="label_folder_path">/folder_1.0</string>
    <string name="label_folder_action">folder_1.0</string>
    <string name="label_bag_path">/bag_2.0</string>
    <string name="label_bag_action">bag_2.0</string>
    <string name="label_map_event_path">/map_event_1.0</string>
    <string name="label_map_event_action">map_event_1.0</string>
    <string name="label_game_path">/game_1.0</string>
    <string name="label_game_action">game_1.0</string>
    <string name="label_luntan_path">/luntan_1.0</string>
    <string name="label_luntan_action">luntan_1.0</string>
    <string name="label_dynamic_path">/dynamic_1.0</string>
    <string name="label_dynamic_action">dynamic_1.0</string>
    <string name="label_common_file_path">/common_file_1.0</string>
    <string name="label_common_file_action">common_file_1.0</string>
    <string name="label_manhua_file_path">/manhua_file_1.0</string>
    <string name="label_manhua_file_action">manhua_file_1.0</string>
    <string name="label_xiaoshuo_file_path">/xiaoshuo_file_1.0</string>
    <string name="label_xiaoshuo_file_action">xiaoshuo_file_1.0</string>
    <string name="label_can_not_use">施工中,敬请期待......</string>
    <string name="label_signed">今天已经签过啦</string>
    <string name="label_sign_suc">签到成功</string>
    <string name="label_later">以后再说</string>
    <string name="label_update">更新</string>
    <string name="label_error_storage">请检查你的存储卡是否正常</string>
    <string name="label_about_neta">关于kira</string>
    <string name="label_hint_new_password">新密码</string>
    <string name="label_hint_again_password">确认密码</string>
    <string name="label_show_password">显示密码</string>
    <string name="label_change_password">修改密码</string>
    <string name="label_reset_password">重置密码</string>
    <string name="label_hint_old_password">旧密码</string>
    <string name="label_password_format">密码长度在6~18之间，只能包含字符、数字和下划线</string>
    <string name="label_like_num" formatted="false">讨论%d</string>
    <string name="label_doc_num" formatted="false">帖子%d</string>
    <string name="label_doc_vote_nums" formatted="false">已有%d人参与投票</string>
    <string name="label_top">置顶</string>
    <string name="label_hot">精华</string>
    <string name="label_post_icon_num" formatted="false">共%d张</string>
    <string name="label_coming_soon">即将到来</string>
    <string name="label_review_past">回顾过去</string>
    <string name="label_doc_only_9_photos">共可选择9张图片</string>
    <string name="label_create_doc_tag">添加标签可以加经验哦</string>
    <string name="label_select_music">选择音乐</string>
    <string name="label_select_movie">选择视频</string>
    <string name="label_select_book">选择文本</string>
    <string name="label_select_img">选择封面</string>
    <string name="label_add_hide">添加隐藏区域</string>
    <string name="label_add_bag">添加一项书包内容</string>
    <string name="label_use_jiecao">（消耗1枚节操）</string>
    <string name="label_hide_info">其他同学需要献上节操才能看见</string>
    <string name="label_bag_info">请选择书包中的一个文件夹</string>
    <string name="label_added">已添加</string>
    <string name="label_confirm">确定</string>
    <string name="label_cancel">取消</string>
    <string name="label_delete">删除</string>
    <string name="label_tag_ctrl">标签管理</string>
    <string name="label_create_post">发表帖子</string>
    <string name="label_update_post">编辑帖子</string>
    <string name="label_create_trash">丢个纸条</string>
    <string name="label_menu_publish_doc">发布</string>
    <string name="label_content_tag_del">如删除该标签，当前标签贴组将不能看到该帖</string>
    <string name="label_more_doc_content">你写得太多啦</string>
    <string name="label_select_img_finish">封面选择完成</string>
    <string name="label_hide_area">隐藏区域</string>
    <string name="label_done">完成</string>
    <string name="label_no_num" formatted="false">No.%d</string>
    <string name="label_donation_book" formatted="false">我捐献了%d枚，</string>
    <string name="label_donation_book_my_rank" formatted="false">排名No.%d</string>
    <string name="label_snow_rank" formatted="false">排名：%d</string>
    <string name="label_book_coin" formatted="false">（%d）</string>
    <string name="label_edit_personal_data">编辑学生证</string>
    <string name="label_secret_setting">隐私设置</string>
    <string name="label_save_modify">保存修改</string>
    <string name="label_hint_input_nickname">氏名</string>
    <string name="label_nickname_input_info">不超过10个字符（限汉字、字母、数字）</string>
    <string name="label_sex">性别</string>
    <string name="label_sex_male">女</string>
    <string name="label_sex_female">男</string>
    <string name="label_birthday">生日</string>
    <string name="label_take_avatar">获取证件照</string>
    <string name="label_take_photo">拍照</string>
    <string name="label_get_picture">从相册选择</string>
    <string name="msg_no_system_camera">没有找到你的摄像头~</string>
    <string name="label_pwd_error_num" formatted="false">密码错误,还可以尝试%d次</string>
    <string name="label_kill_count" formatted="false">第%d周目,Neta学院校长,死亡</string>
    <string name="label_find_password">找回密码</string>
    <string name="label_dlg_select_country">选择国家码</string>
    <string name="label_dlg_find_pwd_by_phone">手机帐号</string>
    <string name="label_dlg_find_pwd_by_email">邮箱帐号</string>
    <string name="label_hint_input_email">电子邮箱</string>
    <string name="label_label_find_pwd_info">手机号码验证通过后，就可以重置密码啦！</string>
    <string name="label_next">下一步</string>
    <string name="label_country_china">+86</string>
    <string name="label_hint_input_phone_number">请输入手机号码</string>
    <string name="label_register_info">注册后，您可以使用[手机号 + 密码]直接登录，您也可以用手机号找回密码</string>
    <string name="label_hint_input_password_register">密码为6-16位数字或字母</string>
    <string name="label_register">注册学籍</string>
    <string name="label_register_by_email">使用邮箱注册学籍</string>
    <string name="label_register_contract">注册即表示您同意使用条款和隐私政策</string>
    <string name="label_register_contract_url_content">使用条款和隐私政策</string>
    <string name="label_personal_center">个人中心</string>
    <string name="label_in_school_time">入学:</string>
    <string name="label_name">氏名:</string>
    <string name="label_birthday_comm">生日:</string>
    <string name="label_level_name">称号:</string>
    <string name="label_jiecao">节操:</string>
    <string name="label_login">登录</string>
    <string name="label_my_post">我的帖子</string>
    <string name="label_my_favorite">我的收藏</string>
    <string name="label_friend_post">Ta的帖子</string>
    <string name="label_save">保存</string>
    <string name="label_raw">原图</string>
    <string name="label_save_to_gallery">保存到相册</string>
    <string name="label_mingan">敏感</string>
    <string name="label_h">色情</string>
    <string name="label_manma">谩骂</string>
    <string name="label_ad">广告</string>
    <string name="label_shui">水贴</string>
    <string name="label_avatar">证件照</string>
    <string name="label_jubao">举报</string>
    <string name="label_hint_login_account_name">手机号</string>
    <string name="label_hint_input_password">请输入密码</string>
    <string name="label_login_third">第三方登陆</string>
    <string name="label_forger_password">忘记密码?</string>
    <string name="label_go_go">随便看看</string>
    <string name="label_reply">回复</string>
    <string name="label_tongzhi">通知</string>
    <string name="label_recent_photos">最近照片</string>
    <string name="label_preview">预览</string>
    <string name="label_zhang">张</string>
    <string name="label_doc">帖子</string>
    <string name="label_pgc">资讯</string>
    <string name="label_cal_top" formatted="false">%s/%d篇内容，%s</string>
    <string name="label_level_introduce">等级说明</string>
    <string name="label_level" formatted="false">%d级</string>
    <string name="label_level_introduce_prefix">还需</string>
    <string name="label_level_introduce_suffix">积分升级</string>
    <string name="label_hint_input_phone_code">请输入短信验证码</string>
    <string name="label_resend">重新发送</string>
    <string name="label_select_fuku">选择服装</string>
    <string name="label_fuku_req" formatted="false">需要等级%d</string>
    <string name="label_person_setting">个人设置</string>
    <string name="label_system_setting">系统设置</string>
    <string name="label_log_out">退出登录</string>
    <string name="label_setting">设置</string>
    <string name="label_coin_details">节操记录</string>
    <string name="label_doc_history">浏览历史</string>
    <string name="label_select_deskmate">选择同桌</string>
    <string name="label_3g_pic">3G下浏览高清图片</string>
    <string name="label_version_update">版本更新</string>
    <string name="label_clear_cache">清除缓存</string>
    <string name="label_jump_to" formatted="false">上一次看到%d楼</string>
    <string name="label_send">发送</string>
    <string name="a_hint_input_comment">输入评论...</string>
    <string name="community_brief_introduction">社团简介</string>
    <string name="community_edit">编辑</string>
    <string name="minister">部长</string>
    <string name="community_apple">申请成为</string>
    <string name="member">成员</string>
</resources>